git ignore updated
Para que no se suba trash al repo

--- a/Git/.gitignore
+++ b/Git/.gitignore
@@ -2,3 +2,11 @@
 /EnterpriseApplication1/nbproject/private/
 /EnterpriseApplication1/Drawdede-war/nbproject/private/
 /EnterpriseApplication1/Drawdede-ejb/nbproject/private/
+/WebApplication/nbproject/private/
+/EnterpriseApplication1/nbproject/private/
+/EnterpriseApplication1/Drawdede-war/nbproject/private/
+/EnterpriseApplication1/Drawdede-ejb/nbproject/private/
+/DrawDD/build/
+/DrawDD/dist/
+/DrawDD/nbproject/
+/DrawDD/build.xml/
