--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Git/DrawDD/DrawDD-war/nbproject/jax-ws.xml
 Git/DrawDD/DrawDD-war/nbproject/jaxws-build.xml
 /Git/DrawDD-cliente/nbproject/private/
 /Git/DrawDD-cliente/build/
+/Git/DrawDD-cliente/dist/
