--- a/Git/DrawDD/nbproject/project.properties
+++ b/Git/DrawDD/nbproject/project.properties
@@ -23,8 +23,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
     ${reference.DrawDD-war.dist-ear}:\
-    ${reference.DrawDD-ejb.dist-ear}:\
-    ${reference.DrawDD-cliente.dist-ear}
+    ${reference.DrawDD-ejb.dist-ear}
 jar.name=DrawDD.ear
 javac.debug=true
 javac.deprecation=false
@@ -33,10 +32,8 @@ javac.target=1.8
 meta.inf=src/conf
 no.dependencies=false
 platform.active=default_platform
-project.DrawDD-cliente=../DrawDD-cliente
 project.DrawDD-ejb=DrawDD-ejb
 project.DrawDD-war=DrawDD-war
-reference.DrawDD-cliente.dist-ear=${project.DrawDD-cliente}/dist/DrawDD-cliente.war
 reference.DrawDD-ejb.dist-ear=${project.DrawDD-ejb}/dist/DrawDD-ejb.jar
 reference.DrawDD-war.dist-ear=${project.DrawDD-war}/dist/DrawDD-war.war
 resource.dir=setup
