--- a/Git/.gitignore
+++ b/Git/.gitignore
@@ -6,7 +6,7 @@
 /EnterpriseApplication1/nbproject/private/
 /EnterpriseApplication1/Drawdede-war/nbproject/private/
 /EnterpriseApplication1/Drawdede-ejb/nbproject/private/
-/DrawDD/build/
-/DrawDD/dist/
+/DrawDD
+/DrawDD-cliente
 /DrawDD/nbproject/
 /DrawDD/build.xml/
